tests/fixtures/invalid-closures/function-use-after-move.mlg
func Double(value int) int {
    return value * 2
}

func main() {
    transform := Double
    moved := transform
    print(transform(1))
}
